[gd_scene load_steps=12 format=2]

[ext_resource path="res://characters/player/player.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Characters/Player/states/motion/in_air/jump.gd" type="Script" id=3]
[ext_resource path="res://Characters/Player/states/motion/on_ground/idle.gd" type="Script" id=4]
[ext_resource path="res://Characters/Player/player_state_machine.gd" type="Script" id=5]
[ext_resource path="res://Characters/Player/states/motion/on_ground/move.gd" type="Script" id=6]
[ext_resource path="res://Characters/Player/helmet.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 89.9999 ]
}

[sub_resource type="Animation" id=2]

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8.50443 ), Vector2( 0, 5.8471 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.64197, 4.71533 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2147500032
script = ExtResource( 2 )
dialog_color = Color( 0.0509804, 0.458824, 0.247059, 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="BodyPivot" type="Position2D" parent="."]
position = Vector2( 0, 8.50443 )

[node name="Body" type="Sprite" parent="BodyPivot"]
position = Vector2( 0, -8.50443 )
texture = ExtResource( 1 )

[node name="Helmet" type="Sprite" parent="BodyPivot"]
position = Vector2( 0, -16.6083 )
texture = ExtResource( 7 )

[node name="PopupLayer" type="CanvasLayer" parent="BodyPivot"]

[node name="Popup" type="Popup" parent="BodyPivot/PopupLayer"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BodyPivot/PopupLayer/Popup"]
margin_left = 40.0
margin_top = 11.4956
margin_right = 100.0
margin_bottom = 25.4956
text = "Attach (Ctrl)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.18219 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_left = 0
limit_top = 0
smoothing_enabled = true
smoothing_speed = 2.0
